--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
+    "@types/": "faker-js/faker",
+    "@types/faker": "^6.6.9",
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "faker": "^6.6.6",
+    "miragejs": "^0.1.45",
     "typescript": "^4.7.3"
   }
 }
