--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.9.1",
     "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -22,6 +23,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
